delete function done

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,35 @@
-h1{
-  color: red;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+body{
+  font-family: 'Ubuntu', sans-serif;
+  background: #f0f1f3;
+}
+h1,h2,h3,h4,h5,h6{
+  font-weight: 700;
+  color: #183153;
+}
+#to-do-field{
+  font-weight: 300;
+  font-size: 16px;
+}
+/* #add-btn{
+  background: #38d9a9;
+  color: #183153;
+  padding: 0px 40px;
+  font-weight: 400;
+} */
+/* #done-btn{
+  background: #38d9a9;
+  color: #183153;
+  padding: 0px 40px;
+  font-weight: 400;
+}
+#delete-btn{
+  background: #38d9a9;
+  color: #183153;
+  padding: 0px 40px;
+  font-weight: 400;
+} */
